--- a/normativas.html
+++ b/normativas.html
@@ -805,17 +805,17 @@
     </section>
 
     <!-- Footer -->
+    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
                     <h3>PaletoRP</h3>
-                    <p>La mejor comunidad de roleplay en FiveM. Vive tu segunda vida en Paleto Bay.</p>
+                    <p>La mejor comunidad de roleplay en ER:LC. Vive tu segunda vida en PaletoRP.</p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-discord"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://discord.gg/UBy2a7NtAb"><i class="fab fa-discord"></i></a>
+                        <a href="https://www.tiktok.com/@paletorpoficial?is_from_webapp=1&sender_device=pc"><i class="fab fa-tiktok"></i></a>
+                        <a href="https://www.youtube.com/@paletorp"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 
@@ -832,15 +832,13 @@
                 <div class="footer-col">
                     <h3>Contacto</h3>
                     <ul>
-                        <li><i class="fas fa-envelope"></i> contacto@paletorp.com</li>
+                        <li><i class="fas fa-envelope"></i> paletorp55@gmail.com</li>
                     </ul>
                 </div>
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2023 PaletoRP. Todos los derechos reservados.</p>
-                <div class="footer-links">
-                </div>
+                <p>&copy; 2023 Smile. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
